# hekfa-tech

./: .gitignore
arc-face/: CMakeLists.txt  README.md  face_detection.py  face_recognition.py
arc-face/src/: core.cpp
